Closed Bug 391182 Opened 17 years ago Closed 17 years ago

"ASSERTION: Unexpected JS context" leaving page with Flash

Categories

(Core Graveyard :: Plug-ins, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jruderman, Unassigned)

References

()

Details

(Keywords: assertion, regression, testcase)

Attachments

(2 files)

Reloading http://www.homestarrunner.com/sbemail.html or the testcase triggers:

###!!! ASSERTION: Unexpected JS context: '(JSContext *)scx->GetNativeContext() == cx', file /Users/jruderman/trunk/mozilla/modules/plugin/base/src/nsJSNPRuntime.cpp, line 1701

This is a regression from within the last few days.
Regression from bug 347743, perhaps?
Attachment #275555 - Attachment description: testcase → testcase (reload to see the assertion)
Blocks: 347743
Yeah, but it's a harmless (and bogus now) assertion. I'll remove it...
Attachment #275707 - Flags: superreview?(jonas)
Attachment #275707 - Flags: review?(jonas)
Attachment #275707 - Flags: superreview?(jonas)
Attachment #275707 - Flags: superreview+
Attachment #275707 - Flags: review?(jonas)
Attachment #275707 - Flags: review+
Flags: blocking1.9+
Marking FIXED. This landed Friday (8/9/2007)
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: