Fixing bug 391182. Remove bogus assertion introduced by one of the fixes for bug 347743. r+sr=jonas@sicking.cc